# MontyHallCliHs

./: Main.hs  montyHall.cabal
