name:           montyHall
version:        0.1.0.0
synopsis:       Playing the Monty Hall problem.
description:    Playing the Monty Hall problem.
homepage:       https://github.com/MartinOlsenDev/MontyHallCliHs#readme
license:        GPL-3
license-file:   LICENSE
author:         Martin Olsen
maintainer:     Martin Olsen
category:       Game
build-type:     Simple
cabal-version:  >=1.10

executable montyHall
  main-is:          Main.hs
  hs-source-dirs:   .
  build-depends:    base >= 4.7 && < 5
                  , random
  default-language: Haskell2010
